--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
 </head>
 
 <body>
